@@ -772,6 +772,7 @@ $1',
 ''Тъй като уикито приема обикновен HTML, предварителният преглед е скрит като предпазна мярка срещу атаки чрез Джаваскрипт.''
 
 <strong>Опитайте отново. Ако все още не сработва, пробвайте да излезете и влезете отново.</strong>",
+'token_suffix_mismatch'     => '<strong>Редакцията ви беше отхвърлена, защото браузърът ви е развалил пунктуационните знаци в редакционната отметка. Евентуалното съхранение би унищожило съдържанието на страницата. Понякога това се случва при използването на грешно работещи анонимни междинни сървъри.</strong>', # TODO разбираем превод на edit token
 'importing'                 => 'Внасяне на $1',
 'editing'                   => 'Редактиране на „$1“',
 'editinguser'               => 'Редактиране на „$1“',
@@ -1005,18 +1006,18 @@ $1',
 'files'                    => 'Файлове',
 
 # User rights
-'userrights-lookup-user'     => 'Управляване на потребителските групи',
-'userrights-user-editname'   => 'Въведете потребителско име:',
-'editusergroup'              => 'Редактиране на потребителските групи',
-'userrights-editusergroup'   => 'Редактиране на потребителските групи',
-'saveusergroups'             => 'Съхранение на потребителските групи',
-'userrights-groupsmember'    => 'Член на:',
-'userrights-groupsavailable' => 'Групи на разположение:',
-'userrights-groupshelp'      => 'Изберете групите, към които искате той да бъде прибавен или от които да бъде премахнат. Неизбраните групи няма да бъдат променени. Можете да отизберете група чрез &lt;CTRL&gt; + ляв бутон на мишката',
-'userrights-reason'          => 'Причина за смяната:',
-'userrights-list'            => 'Тъй като сте член на $1, можете да добавяте $2 и да премахвате $3.',
-'userrights-list-nogroups'   => 'няма групи',
-'userrights-list-groups'     => '{{PLURAL:$1|групата|групите}} $2',
+'userrights-lookup-user'      => 'Управляване на потребителските групи',
+'userrights-user-editname'    => 'Въведете потребителско име:',
+'editusergroup'               => 'Редактиране на потребителските групи',
+'userrights-editusergroup'    => 'Редактиране на потребителските групи',
+'saveusergroups'              => 'Съхранение на потребителските групи',
+'userrights-groupsmember'     => 'Член на:',
+'userrights-groupsavailable'  => 'Групи на разположение:',
+'userrights-groupshelp'       => 'Изберете групите, към които искате той да бъде прибавен или от които да бъде премахнат. Неизбраните групи няма да бъдат променени. Можете да отизберете група чрез &lt;CTRL&gt; + ляв бутон на мишката',
+'userrights-reason'           => 'Причина за смяната:',
+'userrights-available-none'   => 'Не можете да променяте групова принадлежност.',
+'userrights-available-add'    => 'Можете да добавяте потребители към групите $1.',
+'userrights-available-remove' => 'Можете да премахвате потребители от групите $1.',
 
 # Groups
 'group'            => 'Потребителска група:',
@@ -1666,11 +1667,11 @@ $NEWPAGE
 'ip_range_invalid'            => 'Невалиден интервал за IP-адреси.',
 'proxyblocker'                => 'Блокировач на проксита',
 'ipb_cant_unblock'            => 'Грешка: Не е намерен блок с номер $1. Вероятно потребителят е вече отблокиран.',
-'proxyblockreason'            => 'Вашият IP-адрес беше блокиран, тъй като е отворено прокси. Моля, свържете се с доставчика ви на интернет и го информирайте за този сериозен проблем в сигурността.',
+'proxyblockreason'            => 'Вашият IP-адрес беше блокиран, тъй като е анонимно достъпен междинен сървър. Моля, свържете се с доставчика ви на интернет и го информирайте за този сериозен проблем в сигурността.',
 'proxyblocksuccess'           => 'Готово.',
 'sorbs'                       => 'DNSBL',
-'sorbsreason'                 => 'Вашият IP-адрес е записан като отворено прокси в DNSBL на {{SITENAME}}.',
-'sorbs_create_account_reason' => 'Вашият IP-адрес е записан като отворено прокси в DNSBL на {{SITENAME}}. Не можете да създадете сметка.',
+'sorbsreason'                 => 'Вашият IP-адрес е записан като анонимно достъпен междинен сървър в DNSBL на {{SITENAME}}.',
+'sorbs_create_account_reason' => 'Вашият IP-адрес е записан като анонимно достъпен междинен сървър в DNSBL на {{SITENAME}}. Не можете да създадете сметка.',
 
 # Developer tools
 'lockdb'              => 'Заключване на базата от данни',
@@ -1716,7 +1717,7 @@ $NEWPAGE
 'move-watch'              => 'Наблюдаване на страницата',
 'movepagebtn'             => 'Преместване',
 'pagemovedsub'            => 'Преместването беше успешно',
-'pagemovedtext'           => 'Страницата „[[$1]]“ беше преместена под името „[[$2]]“.',
+'movepage-moved'          => "<big>'''Страницата „$1“ беше преместена под името „$2“.'''</big>",
 'articleexists'           => 'Вече съществува страница с това име или името, което сте избрали, е невалидно. Моля, изберете друго име.',
 'talkexists'              => "'''Страницата беше успешно преместена, но без съответната дискусионна страница, защото под новото име има една съществуваща. Моля, обединете ги ръчно.'''",
 'movedto'                 => 'преместена като',
@@ -2268,5 +2269,4 @@ $1',
 'lag-warn-high'   => 'Поради голямото изоставане в сървърната синхронизация, промените от последните $1 секунди вероятно не са показани в списъка.',
 
 );
-
 
