@@ -1216,6 +1216,7 @@ $2 تغییرمسیرها فهرست شوند &nbsp; جستجو برای $3 $9',
 'specialloguserlabel'  => 'کاربر:',
 'speciallogtitlelabel' => 'عنوان:',
 'log'                  => 'سیاهه‌ها',
+'all-logs-page'        => 'تمام سياهه‌ها',
 'log-search-legend'    => 'به دنبال سیاهه‌ها جستجو کن',
 'log-search-submit'    => 'برو',
 'alllogstext'          => 'نمایش یک‌جای بارکردن‌ها، حذف‌ها، حفاظت‌ها، بستن‌ها و سیاهه‌های مربوط به مدیران. می‌توانید با انتخاب نوع سیاهه، نام کاربری و صفحه‌های تغییریافته، نمایش را محدودتر سازید.',
@@ -2166,6 +2167,7 @@ $1',
 'lag-warn-high'   => 'ممکن است ، به خاطر پس‌افتادگی زیاد کارگزار دادگان، تغییرات تازه‌تر از $1 ثانیه، در این فهرست نشان داده نشده باشند.',
 
 );
+
 
 
 
