@@ -8,7 +8,7 @@
 ALTER TABLE /*$wgDBprefix*/oldimage
    DROP INDEX oi_name,
    ADD INDEX oi_name_timestamp (oi_name,oi_timestamp),
-   ADD INDEX oi_name_archive_name (oi_name,oi_archive_name),
+   ADD INDEX oi_name_archive_name (oi_name,oi_archive_name(14)),
    ADD oi_metadata mediumblob NOT NULL,
    ADD oi_media_type ENUM("UNKNOWN", "BITMAP", "DRAWING", "AUDIO", "VIDEO", "MULTIMEDIA", "OFFICE", "TEXT", "EXECUTABLE", "ARCHIVE") default NULL,
    ADD oi_major_mime ENUM("unknown", "application", "audio", "image", "text", "video", "message", "model", "multipart") NOT NULL default "unknown",
